force-app/main/default/objects/phsCoachCheckOut__c/phsCoachCheckOut__c.object-meta.xml
<CustomObject>
    <label>phsCoachCheckOut</label>
    <nameField>
        <label>phsCoachCheckOut Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsCoachCheckOuts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>