force-app/main/default/objects/phsCoachCheckOut__c/fields/Checkout_required__c.field-meta.xml
<CustomField>
    <fullName>Checkout_required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Checkout required</label>
    <type>Checkbox</type>
</CustomField>