force-app/main/default/objects/phsCoachCheckOut__c/fields/Last_checkout_date__c.field-meta.xml
<CustomField>
    <fullName>Last_checkout_date__c</fullName>
    <label>Last checkout date</label>
    <type>DateTime</type>
</CustomField>